--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 		"@fortawesome/free-regular-svg-icons": "^5.15.2",
 		"@fortawesome/free-solid-svg-icons": "^5.15.2",
 		"auth0-js": "^9.14.3",
+		"bootstrap": "^4.6.0",
+		"jquery": "^3.6.0",
 		"rxjs": "~6.5.5",
 		"tslib": "^2.0.0",
 		"zone.js": "~0.10.3"
