--- a/package.json
+++ b/package.json
@@ -12,47 +12,47 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "~12.0.4",
-		"@angular/cdk": "^12.0.4",
-		"@angular/common": "~12.0.4",
-		"@angular/compiler": "~12.0.4",
-		"@angular/core": "~12.0.4",
-		"@angular/forms": "~12.0.4",
-		"@angular/material": "^12.0.4",
-		"@angular/platform-browser": "~12.0.4",
-		"@angular/platform-browser-dynamic": "~12.0.4",
-		"@angular/router": "~12.0.4",
-		"@auth0/auth0-angular": "^1.3.2",
-		"@fortawesome/angular-fontawesome": "^0.8.2",
-		"@fortawesome/fontawesome-svg-core": "^1.2.34",
-		"@fortawesome/free-brands-svg-icons": "^5.15.2",
-		"@fortawesome/free-regular-svg-icons": "^5.15.2",
-		"@fortawesome/free-solid-svg-icons": "^5.15.2",
-		"auth0-js": "^9.14.3",
-		"bootstrap": "^4.6.0",
-		"jquery": "^3.6.0",
-		"rxjs": "~6.5.5",
-		"tslib": "^2.0.0",
+		"@angular/animations": "~12.2.7",
+		"@angular/cdk": "~12.2.7",
+		"@angular/common": "~12.2.7",
+		"@angular/compiler": "~12.2.7",
+		"@angular/core": "~12.2.7",
+		"@angular/forms": "~12.2.7",
+		"@angular/material": "~12.2.7",
+		"@angular/platform-browser": "~12.2.7",
+		"@angular/platform-browser-dynamic": "~12.2.7",
+		"@angular/router": "~12.2.7",
+		"@auth0/auth0-angular": "~1.7.0",
+		"@fortawesome/angular-fontawesome": "~0.9.0",
+		"@fortawesome/fontawesome-svg-core": "~1.2.36",
+		"@fortawesome/free-brands-svg-icons": "~5.15.4",
+		"@fortawesome/free-regular-svg-icons": "~5.15.4",
+		"@fortawesome/free-solid-svg-icons": "~5.15.4",
+		"auth0-js": "~9.16.4",
+		"bootstrap": "~5.1.1",
+		"jquery": "~3.6.0",
+		"rxjs": "~7.3.0",
+		"tslib": "~2.3.1",
 		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~12.0.4",
-		"@angular/cli": "~12.0.4",
-		"@angular/compiler-cli": "~12.0.4",
-		"@types/jasmine": "~3.6.0",
-		"@types/jasminewd2": "~2.0.3",
-		"@types/node": "^12.11.1",
-		"codelyzer": "^6.0.0",
-		"jasmine-core": "~3.6.0",
-		"jasmine-spec-reporter": "~5.0.0",
-		"karma": "~6.3.3",
+		"@angular-devkit/build-angular": "~12.2.7",
+		"@angular/cli": "^12.2.7",
+		"@angular/compiler-cli": "~12.2.7",
+		"@types/jasmine": "~3.9.1",
+		"@types/jasminewd2": "~2.0.10",
+		"@types/node": "~16.9.6",
+		"codelyzer": "~6.0.2",
+		"jasmine-core": "~3.9.0",
+		"jasmine-spec-reporter": "~7.0.0",
+		"karma": "~6.3.4",
 		"karma-chrome-launcher": "~3.1.0",
-		"karma-coverage-istanbul-reporter": "~3.0.2",
-		"karma-jasmine": "~4.0.0",
-		"karma-jasmine-html-reporter": "^1.5.0",
+		"karma-coverage-istanbul-reporter": "~3.0.3",
+		"karma-jasmine": "~4.0.1",
+		"karma-jasmine-html-reporter": "~1.7.0",
 		"protractor": "~7.0.0",
-		"ts-node": "~8.3.0",
-		"tslint": "~6.1.0",
-		"typescript": "~4.2.4"
+		"ts-node": "~10.2.1",
+		"tslint": "~6.1.3",
+		"typescript": "~4.3.5"
 	}
 }
